--- a/form.pizza.html
+++ b/form.pizza.html
@@ -14,7 +14,12 @@
         <p><label>Nome do cliente: <input name="telefone" required placeholder="Telefone do cliente"></label></p>
         <p><label>Telefone: <input name="telefone" type="tel" required placeholder="Telefone"></label></p>
         <p><label>E-mail: <input name="email" type="email" required placeholder="E-mail"></label></p>
-        
+        <fieldset>
+            <legend>Tamanho da pizza</legend>
+            <p><label><input type="radio" name="tamanho" value="pequena">Pequena</label></p>
+            <p><label><input type="radio" name="tamanho" value="média">Média</label></p>
+            <p><label><input type="radio" name="tamanho" value="grande">grande</label></p> 
+        </fieldset>
     </form>
     
 </body>
