--- a/form.pizza.html
+++ b/form.pizza.html
@@ -8,19 +8,14 @@
 </head>
 
 <body>
-
     <h1>Formulário pedido de pizza</h1>
     <form method="get">
-        <p><label>Nome do cliente: <input name="telefone" required placeholder="Telefone do cliente"></label></p>
+        <p><label>Nome do cliente: <input name="nome" required placeholder="Nome do cliente"></label></p>
         <p><label>Telefone: <input name="telefone" type="tel" required placeholder="Telefone"></label></p>
         <p><label>E-mail: <input name="email" type="email" required placeholder="E-mail"></label></p>
-        <fieldset>
-            <legend>Tamanho da pizza</legend>
-            <p><label><input type="radio" name="tamanho" value="pequena">Pequena</label></p>
-            <p><label><input type="radio" name="tamanho" value="média">Média</label></p>
-            <p><label><input type="radio" name="tamanho" value="grande">grande</label></p> 
-         </fieldset> 
+        
     </form>
     
 </body>
+
 </html>
